[package]
name = "tide-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16.0" }
serde = { version = "1.0", fetures = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
femme = "2.2.1"
async-std = { version = "1.12.0", features = ["attributes"] }